# yo

./: .gitignore  NEXT_STEPS.md  PRODUCT.md  README.md  main.py  pyproject.toml  qga.py  requirements.txt  setup.sh  yo.py
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: ci.yml  governance-gates.yml  train-and-evaluate.yml
benchmarks/: benchmark_yo.py
docs/: codex-task-pipeline.md
pipeline/: codex-task-pipeline.json
recovery-ai/: README.md  requirements.txt
recovery-ai/docs/: GOVERNANCE_AND_COMPLIANCE.md  THREAT_MODEL.md
recovery-ai/governance/: __init__.py  audit_bundle.py  enforce_approval_policy.py  validate_pr_metadata.py
recovery-ai/inference/: predict.py  ranking.py
recovery-ai/models/: entropy_model.py  logic_model.py  pattern_model.py  unified_model.py
recovery-ai/notebook/: recovery.ipynb
recovery-ai/processing/: cleaner.py  dataset_builder.py  labeler.py  tokenizer.py
recovery-ai/scraper/: archive_scrape.py  scrape.py  sources.py
recovery-ai/scripts/: __init__.py  ci_pipeline_smoke.py  evaluate_candidate.py
recovery-ai/sparring/: adversarial_generator.py  sparring_loop.py
recovery-ai/tests/: test_ci_scripts.py  test_dataset_builder.py  test_governance.py  test_processing.py  test_ranking.py
recovery-ai/training/: train_entropy.py  train_logic.py  train_pattern.py  train_unified.py
recovery-ai/utils/: __init__.py  config.py  (+1 more)
src/: focus_forge.py
temporal_engine/: __init__.py  _compat.py  benchmark.py
tests/: test_engine.py  test_pipeline.py  test_smoke.py  test_yo.py
tools/: generate_monorepo.py
(+28 files in other folders)
