[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerkit"
version = "0.1.0"
description = "Powerful data operations toolkit"
requires-python = ">=3.10"

[project.scripts]
powerkit = "powerkit.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
